changing home button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- links -->
       <ul class="links">
         <li>
-          <a href="index.html">home</a>
+          <a href="index.html">my home button</a>
         </li>
         <li>
           <a href="about.html">about</a>
