change on branch

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a href="index.html">my home button</a>
         </li>
         <li>
-          <a href="about.html">about</a>
+          <a href="about.html">about catas branch</a>
         </li>
         <li>
           <a href="projects.html">projects</a>
